--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -90,10 +90,11 @@
     <Compile Include="Assets\Scripts\BossStart.cs" />
     <Compile Include="Assets\Scripts\AudioManager.cs" />
     <Compile Include="Assets\Scripts\LoadScene.cs" />
+    <Compile Include="Assets\Scripts\enemyTurret.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Item.cs" />
-    <Compile Include="Assets\Scripts\enemyTurret.cs" />
+    <Compile Include="Assets\Scripts\PauseMenu.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\SimplePixelUI\fonts\Font2\license.txt" />
